--- a/client/package.json
+++ b/client/package.json
@@ -9,22 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.4",
+    "@emotion/react": "^11.10.0",
+    "@mantine/core": "^5.1.1",
+    "@mantine/dropzone": "^5.1.1",
+    "@mantine/hooks": "^5.1.1",
+    "@mantine/next": "^5.1.1",
+    "classnames": "^2.3.1",
+    "framer-motion": "^6.5.1",
+    "lottie-web": "^5.9.6",
+    "next": "^12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-query": "^4.0.0",
+    "sass": "^1.54.1",
+    "tabler-icons-react": "^1.54.0"
   },
   "devDependencies": {
-    "@types/node": "18.6.5",
-    "@types/react": "18.0.17",
+    "@types/node": "18.6.3",
+    "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.1.7",
     "typescript": "4.7.4"
   }
 }
