--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.1.1",
     "@mantine/dropzone": "^5.1.1",
     "@mantine/hooks": "^5.1.1",
     "@mantine/next": "^5.1.1",
+    "@syncfusion/ej2-react-richtexteditor": "^20.2.43",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
     "lottie-web": "^5.9.6",
     "next": "^12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
     "react-query": "^4.0.0",
     "sass": "^1.54.1",
