all routes added

--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,21 @@
     "@mantine/dropzone": "^5.1.1",
     "@mantine/hooks": "^5.1.1",
     "@mantine/next": "^5.1.1",
+    "@mantine/notifications": "^5.1.4",
     "@syncfusion/ej2-react-richtexteditor": "^20.2.43",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "framer-motion": "^6.5.1",
+    "interweave": "^13.0.0",
     "lottie-web": "^5.9.6",
     "next": "^12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
-    "react-query": "^4.0.0",
+    "react-query": "^3.39.1",
+    "react-ripples": "^2.2.1",
+    "react-toastify": "^9.0.8",
     "sass": "^1.54.1",
     "tabler-icons-react": "^1.54.0"
   },
