--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ PORT=4000
 CORS_ORIGIN=http://localhost:3000
 JWT_SECRET=batman
 EXPIRES_IN=7d
+DB_CONNECTION_STRING=mongodb+srv://ImKunal13z:Heliesstill123@cluster0.au5cr.mongodb.net/devBlogs-prototype?retryWrites=true&w=majority
